--- a/TcpWifiConnection/accelerometerwindow.ui
+++ b/TcpWifiConnection/accelerometerwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>634</width>
+    <height>506</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>220</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -18,8 +24,8 @@
     <rect>
      <x>9</x>
      <y>9</y>
-     <width>381</width>
-     <height>281</height>
+     <width>621</width>
+     <height>491</height>
     </rect>
    </property>
   </widget>
