--- a/TcpWifiConnection/mainwindow.ui
+++ b/TcpWifiConnection/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>436</width>
-    <height>221</height>
+    <height>265</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -29,17 +29,10 @@
    <layout class="QGridLayout" name="gridLayout_3">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="3" column="0">
+      <item row="4" column="0">
        <widget class="QPushButton" name="pushButton">
         <property name="text">
          <string>Connect</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QPushButton" name="sendButton">
-        <property name="text">
-         <string>Send</string>
         </property>
        </widget>
       </item>
@@ -47,6 +40,16 @@
        <widget class="QLineEdit" name="data">
         <property name="enabled">
          <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="showAccelWin">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="text">
+         <string>Accelerometer</string>
         </property>
        </widget>
       </item>
@@ -60,7 +63,11 @@
          </widget>
         </item>
         <item row="1" column="2">
-         <widget class="QLineEdit" name="lineEdit_2"/>
+         <widget class="QLineEdit" name="lineEdit_2">
+          <property name="text">
+           <string>4000</string>
+          </property>
+         </widget>
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label">
@@ -70,9 +77,20 @@
          </widget>
         </item>
         <item row="0" column="2">
-         <widget class="QLineEdit" name="lineEdit"/>
+         <widget class="QLineEdit" name="lineEdit">
+          <property name="text">
+           <string>10.0.0.15</string>
+          </property>
+         </widget>
         </item>
        </layout>
+      </item>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="showCmdWin">
+        <property name="text">
+         <string>Commands</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -87,9 +105,38 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuSair">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionSair"/>
+   </widget>
+   <addaction name="menuSair"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionSair">
+   <property name="text">
+    <string>Sair</string>
+   </property>
+  </action>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>actionSair</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>217</x>
+     <y>132</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
